# stop_slop

./: .gitignore  .pre-commit-config.yaml  StopSlop_Extension.crx  extension.crx  mypy.ini  pyproject.toml  readme.md
chrome_extension/: contentScript.js  manifest.json  popup.html  popup.js
extension/: background.js  contentScript.js  inference.js  manifest.json  popup.js
notebooks/: data_exploration.ipynb  fasttext_training-html.ipynb  fasttext_training.ipynb
notebooks/old/: data_analysis_and_linear_model.ipynb
src/: config.py  scrapping.py
src/app/: app.py
src/app/.gradio/flagged/: dataset1.csv
src/fasttext/: fasttext.py
src/model/: fasttext.py  fasttext_features.py  fasttext_inference.py  fasttext_np.py  fasttext_np_nofeatures.py  tokenizer.py  weights.json
src/scrapping/: chrome-setup.sh  readme.md  scrapping.py  sources.yaml
src/stop_slop.egg-info/: PKG-INFO  SOURCES.txt
